--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -54,8 +54,9 @@
 
     <string name="menu_single_player">Einzelspieler</string>
     <string name="menu_multi_player">Mehrspieler</string>
-    <string name="two_players">Zwei Spieler</string>
+    <string name="menu_two_players">Zwei Spieler</string>
     <string name="menu_local_network">Lokales Netzwerk</string>
+    <string name="menu_online_game">Internet</string>
 
     <string name="settings_vibration">Vibration</string>
     <string name="settings_night_mode">Nacht-Modus</string>
@@ -67,6 +68,7 @@
     <string name="yes">"Ja"</string>
     <string name="no">"Nein"</string>
     <string name="create">"Erstellen"</string>
+    <string name="delete">"Löschen"</string>
     <string name="device_info_default">"Unbekannt"</string>
 
     <string name="switch_on_text">"An"</string>
