--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -77,7 +77,7 @@
     <string name="bluetooth_not_discoverable">Зрабіць прыладу бачнай</string>
     <string name="bluetooth_is_discoverable">"Бачна для ўсіх прылад Bluetooth (%1$s)"</string>
     <string name="bluetooth_only_visible_to_paired_devices">"Бачна толькі для спараных прылад"</string>
-    <string name="bluetooth_is_disconnect_question">"Адключыць прыладу „%1$s”?"</string>
+    <string name="bt_is_disconnect_question">"Адключыць прыладу \"%1$s\"?"</string>
     <string name="bluetooth_connected">"Падключана"</string>
     <string name="bluetooth_disconnected">"Раз’яднана"</string>
     <string name="bluetooth_connecting">"Падключэнне…"</string>
