--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -77,7 +77,7 @@
     <string name="bluetooth_not_discoverable">"Hacer visible el dispositivo"</string>
     <string name="bluetooth_is_discoverable">"Visible para dispositivos Bluetooth cercanos (%1$s)"</string>
     <string name="bluetooth_only_visible_to_paired_devices">"Solo visible para dispositivos sincronizados"</string>
-    <string name="bluetooth_is_disconnect_question">"¿Desconectar %1$s?"</string>
+    <string name="bt_is_disconnect_question">"¿Desconectar \"%1$s\"?"</string>
     <string name="bluetooth_connected">"Conectado"</string>
     <string name="bluetooth_disconnected">"Desconectada"</string>
     <string name="bluetooth_connecting">"Estableciendo conexión…"</string>
