--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -77,7 +77,7 @@
     <string name="bluetooth_not_discoverable">"Zezwalaj na wykrywanie urządzenia"</string>
     <string name="bluetooth_is_discoverable">"Widoczne dla wszystkich urządzeń Bluetooth (%1$s)"</string>
     <string name="bluetooth_only_visible_to_paired_devices">"Widoczne tylko dla urządzeń sparowanych"</string>
-    <string name="bluetooth_is_disconnect_question">"Odłączyć urządzenie „%1$s”?"</string>
+    <string name="bt_is_disconnect_question">"Odłączyć urządzenie \"%1$s\"?"</string>
     <string name="bluetooth_connected">"Połączony"</string>
     <string name="bluetooth_disconnected">"Rozłączona"</string>
     <string name="bluetooth_connecting">"Łączenie…"</string>
