--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -69,6 +69,7 @@
     <string name="no">"Non"</string>
     <string name="create">"Créer"</string>
     <string name="delete">"Supprimer"</string>
+    <string name="scan">"Rechercher"</string>
     <string name="device_info_default">"Inconnu"</string>
 
     <string name="switch_on_text">"Activé"</string>
