--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <!-- 23 Strings for Dialog create button -->
     <string name="create">Create</string>
     <string name="delete">Delete</string>
+    <string name="scan">Scan</string>
     <!-- 33 Device Info screen. Used for a status item's value when the proper value is not known -->
     <string name="device_info_default">Unknown</string>
 
