--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -80,6 +80,7 @@
     <string name="no">"خیر"</string>
     <string name="create">"ایجاد"</string>
     <string name="delete">"حذف"</string>
+    <string name="scan">"اسکن"</string>
     <string name="device_info_default">"ناشناس"</string>
 
     <string name="switch_on_text">"روشن"</string>
