--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -70,6 +70,7 @@
     <string name="create">"Erstellen"</string>
     <string name="delete">"Löschen"</string>
     <string name="scan">"Scannen"</string>
+    <string name="searching">"Suche läuft…"</string>
     <string name="device_info_default">"Unbekannt"</string>
 
     <string name="switch_on_text">"An"</string>
