--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -70,6 +70,7 @@
     <string name="create">"Crear"</string>
     <string name="delete">"Eliminar"</string>
     <string name="scan">"Buscar"</string>
+    <string name="searching">"Buscando…"</string>
     <string name="device_info_default">"Desconocido"</string>
 
     <string name="switch_on_text">"Activado"</string>
