--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -104,6 +104,7 @@
     <string name="phone_language">"Sprache"</string>
     <string name="share">"Teilen"</string>
     <string name="search_menu">"Suchen"</string>
+    <string name="search_settings_no_results">"Keine Ergebnisse"</string>
 
 
     <string name="bt_message_your_turn">Ihre Umdrehung…</string>
