--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -104,6 +104,7 @@
     <string name="phone_language">"Langue"</string>
     <string name="share">"Partager"</string>
     <string name="search_menu">"Rechercher"</string>
+    <string name="search_settings_no_results">"Aucun résultat"</string>
 
 
     <string name="bt_message_your_turn">Action du joueur…</string>
