--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -104,6 +104,7 @@
     <string name="phone_language">"Lingua"</string>
     <string name="share">"Condividi"</string>
     <string name="search_menu">"Cerca"</string>
+    <string name="search_settings_no_results">"Nessun risultato"</string>
 
 
     <string name="bt_message_your_turn">Your move, put a dot…</string>
