--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -104,6 +104,7 @@
     <string name="phone_language">"Język"</string>
     <string name="share">"Udostępnij"</string>
     <string name="search_menu">"Szukaj"</string>
+    <string name="search_settings_no_results">"Brak wyników"</string>
 
 
     <string name="bt_message_your_turn">Wasz ruch, postaw kropkę…</string>
