--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -104,6 +104,7 @@
     <string name="phone_language">"Мова"</string>
     <string name="share">"Поділитися"</string>
     <string name="search_menu">"Пошук"</string>
+    <string name="search_settings_no_results">"Результатів немає"</string>
 
 
     <string name="bt_message_your_turn">Твій крок, постав точку…</string>
