--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,7 @@
     <string name="vpn_no_network">There is no network connection. Please try again later.</string>
     <!-- 5597 Text used as a search hint into the search box -->
     <string name="search_menu">Search</string>
+    <string name="search_settings_no_results">No results</string>
 
 
     <string name="bt_message_your_turn">Your move, put a dot…</string>
