--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -116,6 +116,7 @@
     <string name="share">"به اشتراک بگذارید"</string>
     <string name="search_menu">"جستجو"</string>
     <string name="search_settings_no_results">"نتیجه‌ای پیدا نشد"</string>
+    <string name="disabled_low_ram_device">"این ویدیو در این دستگاه دردسترس نیست."</string>
 
 
     <string name="bt_message_your_turn">…نوبت شماست. نقطه بگذارید </string>
