--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -105,6 +105,7 @@
     <string name="share">"Teilen"</string>
     <string name="search_menu">"Suchen"</string>
     <string name="search_settings_no_results">"Keine Ergebnisse"</string>
+    <string name="disabled_low_ram_device">"Diese Funktion ist auf diesem Gerät nicht verfügbar"</string>
 
 
     <string name="bt_message_your_turn">Ihre Umdrehung…</string>
