--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -105,6 +105,7 @@
     <string name="share">"Compartir"</string>
     <string name="search_menu">"Buscar"</string>
     <string name="search_settings_no_results">"Sin resultados"</string>
+    <string name="disabled_low_ram_device">"Esta función no está disponible en este dispositivo"</string>
 
 
     <string name="bt_message_your_turn">Su turno…</string>
