--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -105,6 +105,7 @@
     <string name="share">"Partager"</string>
     <string name="search_menu">"Rechercher"</string>
     <string name="search_settings_no_results">"Aucun résultat"</string>
+    <string name="disabled_low_ram_device">"Cette fonctionnalité n\'est pas disponible sur cet appareil"</string>
 
 
     <string name="bt_message_your_turn">Action du joueur…</string>
