--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -105,6 +105,7 @@
     <string name="share">"Condividi"</string>
     <string name="search_menu">"Cerca"</string>
     <string name="search_settings_no_results">"Nessun risultato"</string>
+    <string name="disabled_low_ram_device">"Questa funzione non è disponibile su questo dispositivo"</string>
 
 
     <string name="bt_message_your_turn">Your move, put a dot…</string>
