--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -105,6 +105,7 @@
     <string name="share">"Udostępnij"</string>
     <string name="search_menu">"Szukaj"</string>
     <string name="search_settings_no_results">"Brak wyników"</string>
+    <string name="disabled_low_ram_device">"Ta funkcja jest niedostępna na tym urządzeniu."</string>
 
 
     <string name="bt_message_your_turn">Wasz ruch, postaw kropkę…</string>
