--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -105,6 +105,7 @@
     <string name="share">"Поділитися"</string>
     <string name="search_menu">"Пошук"</string>
     <string name="search_settings_no_results">"Результатів немає"</string>
+    <string name="disabled_low_ram_device">"Ця функція недоступна на цьому пристрої"</string>
 
 
     <string name="bt_message_your_turn">Твій крок, постав точку…</string>
