--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -62,6 +62,7 @@
     <string name="settings_night_mode">Mode nuit</string>
     <string name="settings_auto">"Automatique"</string>
     <string name="settings_system">"Système"</string>
+    <string name="settings_dots">"Des points"</string>
     <string name="settings_reset">"Tout effacer"</string>
     <string name="rate_this_app">Noter cette application</string>
 
