--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -62,6 +62,7 @@
     <string name="settings_night_mode">Modalità notturna</string>
     <string name="settings_auto">"Auto"</string>
     <string name="settings_system">"Sistema"</string>
+    <string name="settings_dots">"Punti"</string>
     <string name="settings_reset">"Cancella tutto"</string>
     <string name="rate_this_app">Valuta questa app</string>
 
