--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,7 @@
     <string name="bluetooth_preference_paired_devices">Paired devices</string>
     <!-- 1205 Bluetooth activity setting: The sub heading for available devices during and after scanning. [CHAR LIMIT=40] -->
     <string name="bluetooth_preference_found_devices">Available devices</string>
+    <string name="bluetooth_connect_failed" translatable="false">Couldn\'t connect. Try again.</string>
 
     <!-- 2355 Edit access point label summary text when no value has been set -->
     <string name="apn_not_set">Not set</string>
