--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -45,7 +45,7 @@
     <string name="end_lose">Hai perso!</string>
     <string name="end_new_game">Nuovo</string>
     <string name="end_undo">Revocare</string>
-    <string name="end_move">%1$d movimenti sono stati fatti per %2$d s.</string>
+    <string name="end_move">%1$d movimenti sono stati fatti per %2$s.</string>
 
     <string name="scores_time">Tempo</string>
     <string name="end_publish">Pubblicare</string>
